  * Updated Microsoft.EntityFrameworkCore.Relational v7.0.3 (NET7)

AllOverIt.EntityFrameworkCore.Diagrams
  * New package. Adds support for generating D2 entity relationship diagrams and exporting to text, svg, png, pdf.

AllOverIt.Fixture
AllOverIt.Fixture.FakeItEasy
  * Updated FluentAssertions v6.10.0

AllOverIt.GenericHost
  * Updated Microsoft.Extensions.Hosting v7.0.1

AllOverIt.ReactiveUI
  * Added support for a ReactiveCommand based pipeline (with support for chaining other sync / async pipeline steps)
  * Updated ReactiveUI v18.4.22

AllOverIt.Validation
  * Updated FluentValidation v11.5.1

AllOverIt.Validation.Options - New Package
  * Add config options validation using FluentValidation and AllOverIt.Validation


02 Feb 2023
Version 6.3.0
======================================================================================================================
AllOverIt.Csv
  * Updated SerializeAsync() to allow the text writer to remain open so multiple, appending, calls can be made
  * Added an overload accepting IAsyncEnumerable data


07 Dec 2022
Version 6.2.1
======================================================================================================================
AllOverIt
  * Updated ObjectMapper so the dynamic configuration is thread safe. The convenience of "configuration free" is the
    priority of this mapper.


07 Dec 2022
Version 6.2.0
======================================================================================================================
AllOverIt
  * Re-worked the ObjectPropertySerializer so it contains the optional filter instead of being a property on the Options.
    This now means multiple serializers can be requested from the registry such that they all use their own filter instance
    while sharing a Singleton options.


06 Dec 2022
Version 6.1.0
======================================================================================================================
AllOverIt